--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".DoctorActivity"
+            android:label="DoctorActivity" >
+        </activity>
+        <activity
+            android:name=".PacientActivity"
+            android:label="@string/title_activity_pacient" >
+        </activity>
     </application>
 
 </manifest>
