Pagina de exemplo com resultado da busca

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:name=".UpdateDoctorActivity"
             android:label="@string/title_activity_update_doctor" >
         </activity>
+        <activity
+            android:name=".DoctorsListActivity"
+            android:label="@string/title_activity_doctors_list" >
+        </activity>
     </application>
 
 </manifest>
